<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="TOR_CB" Id="{897a7932-5722-4e88-91c8-2a3edbc8a90d}">
    <Declaration><![CDATA[TYPE TOR_CB :
STRUCT
	
	MesData					: TOR ;		(* MesData 											 *)
	MesTripped				: BOOL;		(* (NA) CB is tripped*)
	MesCP_Open				: BOOL; 	(* (NA) Permanent condition to open CB *)
	MesCP_Close				: BOOL; 	(* (NA) Permanent condition to close CB *)
END_STRUCT		
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>